# open-source-slack-ai

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  codeclimate.yml  example.env  manifest.yaml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: poetry-package.yml  python-app.yml
hackathon_2023/: handlers.py  slack_server.py  summarizer.py  topic_analysis.py  utils.py
ossai/: decorators.py  handlers.py  logging_config.py  sentiment.py  slack_context.py  slack_server.py  summarizer.py  topic_analysis.py  utils.py
ossai/decorators/: catch_error_dm_user.py  to_pdf.py
ossai/utils/: __init__.py  config.py  langsmith.py  slack.py
tests/: test_decorators.py  test_hackathon_2023.py  test_handlers.py  test_integration.py  test_ossai.py  test_sentiment.py  test_slack_context.py  test_slack_server.py  test_summarizer.py  test_topic_analysis.py  test_utils.py
tests/decorators/: test_catch_errors_and_dm_user.py
