[tool.poetry]
name = "hackathon-2023"
version = "0.1.0"
description = ""
authors = ["Bryce York <bryce@bryceyork.com>"]
readme = "README.md"
packages = [{include = "hackathon_2023"}]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.21.3"
slack-bolt = "^1.18.0"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
openai = "^0.27.9"
scikit-learn = "^1.3.0"
spacy = "^3.6.1"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0-py3-none-any.whl"}
nltk = "^3.8.1"
gensim = "^4.3.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.6"
coverage = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

