[tool.poetry]
name = "open-source-slack-ai"
version = "0.1.4"
description = ""
authors = ["Bryce York <bryce@bryceyork.com>"]
readme = "README.md"
packages = [{include = "ossai"}]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.21.3"
slack-bolt = "^1.18.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.9"
openai = "^0.27.9"
scikit-learn = "^1.3.0"
spacy = "^3.6.1"
nltk = "^3.8.1"
gensim = "^4.3.2"
coverage = "^7.4.4"
scipy = "1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

