[tool.poetry]
name = "open-source-slack-ai"
version = "0.5.2"
description = "An open source alternative to some of Slack AI's premium features. Summarize channels and threads any time you want."
authors = ["Bryce York <bryce@bryceyork.com>"]
readme = "README.md"
packages = [{include = "ossai"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
slack-sdk = "^3.21.3"
slack-bolt = "^1.18.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.9"
openai = "^1.33.0"
scikit-learn = "^1.3.0"
spacy = "^3.6.1"
nltk = "^3.9.1"
gensim = "^4.3.2"
coverage = "^7.4.4"
scipy = "1.12"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
reportlab = "^4.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.6"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

